err/gnip-powertrack-rules.err
Listing '.'...
Listing './bin'...
Compiling './bin/create_rules.py'...
***   File "./bin/create_rules.py", line 62
    print r
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/delete_rules.py'...
***   File "./bin/delete_rules.py", line 26
    print "No url provided. Add [defaults] url=... to config file or use -u ..."
                                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/list_rules.py'...
***   File "./bin/list_rules.py", line 31
    print "No url provided. Add [defaults] url=... to config file or use -u ..."
                                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/update_rules.py'...
***   File "./bin/update_rules.py", line 33
    print g.getResponse()
          ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/gnip_powertrack_rules-0.2.2.egg-info'...
Listing './lib/python3.5/site-packages/gnip_rules'...
Compiling './lib/python3.5/site-packages/gnip_rules/gnip_rules.py'...
***   File "./lib/python3.5/site-packages/gnip_rules/gnip_rules.py", line 277
    print "Testing against: %s"%Url
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
